--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>VIP之夜 - 10x Genomics&世基生醫</title>
 </head>
 <body>
-    <h1>感謝您的告知，期待當日與你相會</h1>
+    <h1>感謝您的告知，期待當日您相會</h1>
 
 </body>
 </html>
