--- a/index.html
+++ b/index.html
@@ -1,13 +1,1 @@
-<!DOCTYPE html>
-<html lang="zh-Hant">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>VIP之夜 - 10x Genomics&世基生醫</title>
-</head>
-<body>
-    <h1>感謝您的告知，期待當日您相會</h1>
-
-</body>
-</html>
+<!doctype html><html lang="zh-Hant"><head><meta charset="utf-8"/><link rel="icon" href="./favicon.ico"/><meta name="viewport" content="width=device-width,initial-scale=1"/><meta name="theme-color" content="#000000"/><meta name="description" content="Web site created using create-react-app"/><link rel="apple-touch-icon" href="./logo192.png"/><link rel="manifest" href="./manifest.json"/><title>SURVEY</title><script defer="defer" src="./static/js/main.5c4a2bf4.js"></script><link href="./static/css/main.ab36a9e9.css" rel="stylesheet"> </head><body><noscript>You need to enable JavaScript to run this app.</noscript><div id="root"></div></body></html>
